implement OpenGraph protocol, cleanup config.rb

--- a/data/site.yml
+++ b/data/site.yml
@@ -1,3 +1,6 @@
 title: StartupsOfParis
-meta_description: Lorem ipsum some nice description here.
+description: Lorem ipsum some nice description here.
+base_url: http://startupsofparis.com
+site_logo: some_relative_path
 
+twitter_handle: nebulae2016
