--- a/data/site.yml
+++ b/data/site.yml
@@ -1,6 +1,6 @@
-title: StartupsOfParis
+title: ParisianStartups
 description: Lorem ipsum some nice description here.
-base_url: http://startupsofparis.com
+base_url: http://parisianstartups.com
 site_logo: some_relative_path
 
 twitter_handle: nebulae2016
