upd description, fix small things

--- a/data/site.yml
+++ b/data/site.yml
@@ -1,5 +1,5 @@
 title: ParisianStartups
-description: Lorem ipsum some nice description here.
+description: The best startups in Paris.
 base_url: http://parisianstartups.com
 site_logo: some_relative_path
-twitter_handle: nebulae2016
+twitter_handle: parisianstartup
